Ajustes responsivos e mudanças nos textos

--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
                     </li>
                     <li>
                         Escolha o SEU plano ideal e vem!
-
                     </li>
+
+                    <h1>Planos</h1>
                 </ul>
             </div>
             <div class="container">
@@ -141,7 +142,11 @@
                                 <li>Tudo isso completamente personalizado e adequado à sua rotina e nível de estudos.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
-                                <h3>Investimento de lançamento: De R$ 299,00 Por R$ 199,00</h3>
+                                <h3>Investimento de lançamento:</h3>
+                                <ul class="preco">
+                                    <h2>R$ 299,00</h2>
+                                    <h1>R$ 199,00</h1>
+                                </ul>
                                 <a class="botao-contato" href="https://api.whatsapp.com/send?phone=558499804047" target="_blank ">Já quero!</a>
                             </ul>
                         </div>
@@ -158,10 +163,10 @@
                             <ul>
                                 <li>1) Análise e diagnóstico do perfil do aluno;</li>
                                 <li>2) Bate papo orientado, abordando:
-                                    <p> - Como estudar;</p>
+                                    <p>- Como estudar;</p>
                                     <p>- Como revisar;</p>
                                     <p>- Como/quando resumir;</p>
-                                    <p>-Como resolver questões.</p>
+                                    <p>- Como resolver questões.</p>
                                 </li>
                                 <li>3) Planejamento e acompanhamento de cronograma individualizado;</li>
                                 <li>4) Montagem do SEU Ciclo de estudos totalmente personalizado de acordo com o peso do edital, seu nível de conhecimento atual, seus pontos fortes e de melhoria em cada disciplina;</li>
@@ -181,7 +186,11 @@
                                 <li>11) MIMO SURPRESA.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
-                                <h3>Investimento: (Valor promocional de lançamento) De R$ 1.499,00 Por R$ 999,00</h3>
+                                <h3>Investimento: (Valor promocional de lançamento)</h3>
+                                <ul class="preco">
+                                    <h2>R$ 1499,00</h2>
+                                    <h1>R$ 999,00</h1>
+                                </ul>
                                 <a class="botao-contato" href="https://api.whatsapp.com/send?phone=558499804047" target="_blank ">Já quero!</a>
                             </ul>
                         </div>
@@ -211,7 +220,7 @@
         <div id="contato" class="container ">
             <ul class="footer-redes-sociais ">
                 <li>
-                    <a target="_blank " aria-label="Contate pelo whatsApp">
+                    <a href="https://api.whatsapp.com/send?phone=558499804047" target="_blank " aria-label="Contate pelo whatsApp">
                         <svg viewBox="0 0 24 24 ">
 							<path fill="currentColor "
 								d="M12.04 2C6.58 2 2.13 6.45 2.13 11.91C2.13 13.66 2.59 15.36 3.45 16.86L2.05 22L7.3 20.62C8.75 21.41 10.38 21.83 12.04 21.83C17.5 21.83 21.95 17.38 21.95 11.92C21.95 9.27 20.92 6.78 19.05 4.91C17.18 3.03 14.69 2 12.04 2M12.05 3.67C14.25 3.67
@@ -224,7 +233,7 @@
                 </li>
 
                 <li>
-                    <a href="https://www.facebook.com/ " target="_blank " aria-label="Visite a página no facebook ">
+                    <a href="https://www.facebook.com/Meu-Ciclo-Estudos-Orientados-106786371185043" target="_blank " aria-label="Visite a página no facebook ">
                         <svg viewBox="0 0 24 24 ">
 							<path fill="currentColor "
 								d="M12 2.04C6.5 2.04 2 6.53 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.85C10.44 7.34 11.93 5.96 14.22 5.96C15.31 5.96 16.45 6.15 16.45 6.15V8.62H15.19C13.95 8.62 13.56 9.39 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96A10
