Ajustes de texto e mudança na section planos
Ajustes simples de formatação e modo de exibição de textos na área planos e adição de imagens para preencher a section na versão mobile.

--- a/index.html
+++ b/index.html
@@ -85,31 +85,72 @@
 
 
         <section id="planos" class="plano">
-            <div class="container">
-                <ul class="title-planos-texto">
-                    <li>
-                        Que tal um ciclo pra chamar de SEU??
-                    </li>
-                    <li>
-                        Turbine sua preparação ESTUDANDO CERTO.
-                    </li>
-                    <li>
-                        Planejamento e cronograma completamente personalizados e adequados à sua rotina e nível de estudos.
-                    </li>
-                    <li>
-                        Tudo mastigadinho para você acordar e saber exatamente o que vai fazer diariamente.
-                    </li>
-                    <li>
-                        Sua obrigação é só estudar (que já não é pouca coisa, néah?!) O resto, deixa com a gente.
-                    </li>
-                    <li>
-                        Escolha o SEU plano ideal e vem!
-                    </li>
+            <picture>
+                <img src="./assets/img/pictures/meuciclo-planos-bg.jpg" alt="Background Meu Ciclo" class="planos-foto-bg" />
+            </picture>
 
-                    <h1>Planos</h1>
+            <div class="container-bg-planos">
+                <ul>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/planos.jpg" alt="Planos" class="bg-plano" />
+                        </picture>
+                    </div>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/1.jpg" alt="Que tal um ciclo pra chamar de SEU?" class="bg-plano" />
+                        </picture>
+                    </div>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/2.jpg" alt="Turbine sua preparação estudando CERTO!" class="bg-plano" />
+                        </picture>
+                    </div>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/3.jpg" alt="Planejamento e cronograma completamente personalizados e adequados à sua rotina e nível de estudos." class="bg-plano" />
+                        </picture>
+                    </div>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/4.jpg" alt="Tudo mastigadinho para você acordar e saber exatamente o que vai fazer diariamente." class="bg-plano" />
+                        </picture>
+                    </div>
+                    <div>
+                        <picture>
+                            <img src="./assets/img/pictures/bg's-planos/5.jpg" alt="Escolha o SEU plano ideal e vem!" class="bg-plano" />
+                        </picture>
+                    </div>
                 </ul>
+                <!--
+
+    <ul class="title-planos-texto">
+        <h1>Planos</h1>
+        <li>
+            Que tal um ciclo pra chamar de SEU??
+        </li>
+        <li>
+            Turbine sua preparação ESTUDANDO CERTO.
+        </li>
+        <li>
+            Planejamento e cronograma completamente personalizados e adequados à sua rotina e nível de estudos.
+        </li>
+        <li>
+            Tudo mastigadinho para você acordar e saber exatamente o que vai fazer diariamente.
+        </li>
+        <li>
+            Sua obrigação é só estudar (que já não é pouca coisa, néah?!) O resto, deixa com a gente.
+        </li>
+        <li>
+            Escolha o SEU plano ideal e vem!
+        </li>
+        
+    </ul>
+-->
             </div>
             <div class="container">
+
+                <br>
                 <div class="caixas-planos">
                     <div class="caixa-plano">
                         <picture>
@@ -142,7 +183,7 @@
                                 <li>Tudo isso completamente personalizado e adequado à sua rotina e nível de estudos.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
-                                <h3>Investimento de lançamento:</h3>
+                                <h3>Investimento promocional de lançamento:</h3>
                                 <ul class="preco">
                                     <h2>R$ 299,00</h2>
                                     <h1>R$ 199,00</h1>
@@ -186,9 +227,9 @@
                                 <li>11) MIMO SURPRESA.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
-                                <h3>Investimento: (Valor promocional de lançamento)</h3>
+                                <h3>Investimento promocional de lançamento:</h3>
                                 <ul class="preco">
-                                    <h2>R$ 1499,00</h2>
+                                    <h2>R$ 1.499,00</h2>
                                     <h1>R$ 999,00</h1>
                                 </ul>
                                 <a class="botao-contato" href="https://api.whatsapp.com/send?phone=558499804047" target="_blank ">Já quero!</a>
@@ -198,10 +239,7 @@
 
                 </div>
             </div>
-            <picture>
-                <source srcset="./assets/img/pictures/webp's/student-typing-notebook.webp" type="image/webp" />
-                <img src="./assets/img/pictures/student-typing-notebook.jpg" alt="Background Meu Ciclo" class="planos-foto-bg" />
-            </picture>
+            <br>
         </section>
 
 
