Ajuste no texto sobre e atualização do conteúdo

--- a/index.html
+++ b/index.html
@@ -65,14 +65,20 @@
 
                     <h1>Thereza Montenegro, 31 anos</h1>
                     <ul class="texto-sobre">
-                        <li>Casada, Mãe;</li>
-                        <li>Advogada por formação;</li>
-                        <p>Servidora Pública Federal aprovada em 4 concursos públicos em um intervalo de 8 meses. Com a própria experiência e depois de, despretensiosamente, auxiliar amigos e pessoas próximas a encararem o estudo para concurso de forma estratégica,
-                            resolveu levar adiante um projeto idealizado ainda em 2018.</p>
-                        <p>Nasce, então, o “MEU Ciclo – Estudo orientado para concursos” com a missão de ajudar pessoas comuns, que sonham com a carreira pública, mas não sabem por onde começar ou estão cansadas de perderem tempo estudando sem direcionamento
-                            e planejamento, a potencializarem seus resultados.</p>
-                        <p>Se pretende passar num concurso público e se sente assim, você está no lugar certo. Venha estudar corretamente, utilizando os melhores métodos de retenção de conteúdo comprovados cientificamente, além do uso de uma excelente ferramenta
-                            de controle... Dê o um passo decisivo para a realização do seu sonho. Só vem!</p>
+                        <p>Casada; mãe; advogada por formação; servidora Pública Federal aprovada em 4 concursos públicos em um intervalo de 8 meses.</p>
+                        <p>
+                            Com a própria experiência e depois de, despretensiosamente, auxiliar amigos e pessoas próximas a encararem o estudo para concurso de forma estratégica, resolveu levar adiante um projeto idealizado ainda em 2018.
+                        </p>
+                        <p>
+                            Nasce, então, o “MEU Ciclo – Estudo Orientado”, cuja missão é ajudar pessoas comuns, que sonham com a carreira pública, mas não sabem por onde começar ou estão cansadas de perder tempo estudando sem direcionamento e planejamento, a potencializarem seus
+                            resultados.
+                        </p>
+                        <p>Se pretende passar num concurso público e se sente assim, você está no lugar certo.</p>
+                        <p>
+                            Venha estudar corretamente, utilizando os melhores métodos de retenção de conteúdo comprovados cientificamente, além do acesso a uma excelente ferramenta de controle que vai ser sua aliada nas “queridas” revisões de cada dia. Dê um passo decisivo para
+                            a realização do seu sonho. Só vem!
+                        </p>
+
                     </ul>
 
                 </section>
@@ -154,8 +160,8 @@
                 <div class="caixas-planos">
                     <div class="caixa-plano">
                         <picture>
-                            <source srcset="./assets/img/logos/webp's/b&w-cut.webp" type="image/webp" />
-                            <img src="./assets/img/logos/b&w-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
+                            <source srcset="./assets/img/logos/webp's/white-n-purple-cut.webp" type="image/webp" />
+                            <img src="./assets/img/logos/white-n-purple-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
                         </picture>
 
                         <h1>Top</h1>
@@ -167,7 +173,7 @@
                                     <p> - Como estudar;</p>
                                     <p>- Como revisar;</p>
                                     <p>- Como/quando resumir;</p>
-                                    <p>-Como resolver questões.</p>
+                                    <p>- Como resolver questões.</p>
                                 </li>
                                 <li>3) Planejamento de cronograma individualizado;</li>
                                 <li>4) Montagem do SEU Ciclo de estudos totalmente personalizado de acordo com o peso do edital, seu nível de conhecimento atual, seus pontos fortes e de melhoria em cada disciplina;</li>
@@ -195,8 +201,8 @@
                     <br>
                     <div class="caixa-plano-2">
                         <picture>
-                            <source srcset="./assets/img/logos/webp's/b&w-cut.webp" type="image/webp" />
-                            <img src="./assets/img/logos/b&w-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
+                            <source srcset="./assets/img/logos/webp's/white-n-purple-cut.webp" type="image/webp" />
+                            <img src="./assets/img/logos/white-n-purple-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
                         </picture>
                         <h1>Premium</h1>
                         <h2>Mentoria completa com 10 encontros (1 por semana), via videoconferência, para definição e acompanhamento (e ajuste) de metas.</h2>
