Removendo a idade da section sobre

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="container">
                 <section id="sobre" class="sobre">
 
-                    <h1>Thereza Montenegro, 31 anos</h1>
+                    <h1>Thereza Montenegro</h1>
                     <ul class="texto-sobre">
                         <p>Casada; mãe; advogada por formação; servidora Pública Federal aprovada em 4 concursos públicos em um intervalo de 8 meses.</p>
                         <p>
