Mudança no texto do plano Meu Ciclo - Premium

--- a/index.html
+++ b/index.html
@@ -216,12 +216,13 @@
                                     <p>- Controle de revisões automático;</p>
                                 </li>
                                 <li>7) Técnicas avançadas para evitar a curva do esquecimento;</li>
-                                <li>8) Acompanhamento integral pelo WhatsApp para tirar dúvidas;</li>
-                                <li>9) Atualização do edital (quando for publicado) verticalizado e escalonado - classificação de disciplinas por relevância (assuntos mais cobrados);</li>
-                                <li>10) Acompanhamento, durante 15 dias, por e-mail, para tirar dúvidas;</li>
+                                <li>8) Acompanhamento integral pelo WhatsApp e/ou e-mail para tirar dúvidas;</li>
+                                <li>9) Atualização do edital (quando for publicado);</li>
+                                <li>10) Acesso a um escalonamento - classificação de disciplinas por relevância (assuntos mais cobrados) nas matérias-base;</li>
+                                <li>11) Acompanhamento, durante 15 dias, por e-mail, para tirar dúvidas;</li>
                                 <li>Bônus: Encontro extra para ajuste de metas pós-edital;</li>
                                 <li>Bônus: Aplicação de 3 Simulados;</li>
-                                <li>11) MIMO SURPRESA.</li>
+                                <li>12) MIMO SURPRESA.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
                                 <h3>Investimento promocional de lançamento:</h3>
