--- a/index.html
+++ b/index.html
@@ -151,9 +151,13 @@
                 <div class="caixas-planos">
                     <div class="caixa-plano">
                         <picture>
+                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve novas vagas" class="esgotado-planos">
+                        </picture>
+                        <picture>
                             <source srcset="./assets/img/logos/webp's/white-n-purple-cut.webp" type="image/webp" />
                             <img src="./assets/img/logos/white-n-purple-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
                         </picture>
+
 
                         <h1>Top</h1>
                         <h2>Consultoria com 1 encontro, via videoconferência, para planejamento e definição de metas.</h2>
@@ -191,6 +195,9 @@
                     </div>
                     <br>
                     <div class="caixa-plano-2">
+                        <picture>
+                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve novas vagas" class="esgotado-planos">
+                        </picture>
                         <picture>
                             <source srcset="./assets/img/logos/webp's/white-n-purple-cut.webp" type="image/webp" />
                             <img src="./assets/img/logos/white-n-purple-cut.jpg" alt="Logomarca Meu Ciclo" class="logo-title-planos">
