--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                     <div class="caixa-plano">
 
                         <picture>
-                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve novas vagas" class="esgotado-planos">
+                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve, novas vagas" class="esgotado-planos">
                         </picture>
 
                         <picture>
@@ -198,7 +198,7 @@
                     <br>
                     <div class="caixa-plano-2">
                         <picture>
-                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve novas vagas" class="esgotado-planos">
+                            <img src="./assets/img/pictures/esgotado.png" alt="Encerradas! Em breve, novas vagas" class="esgotado-planos">
                         </picture>
                         <picture>
                             <source srcset="./assets/img/logos/webp's/white-n-purple-cut.webp" type="image/webp" />
