--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
 
                         <h1>Top</h1>
-                        <h2>Consultoria com 1 encontro, via videoconferência, para planejamento e definição de metas.</h2>
+                        <h2>Consultoria com 2 encontros, via videoconferência, para planejamento e definição de metas.</h2>
                         <div class="container-plano">
                             <ul>
                                 <li>1) Análise e diagnóstico do perfil do aluno;</li>
