Mudança nos tópicos dos planos

--- a/index.html
+++ b/index.html
@@ -177,12 +177,13 @@
                                 <li>5) Direcionamento para otimização do tempo diário disponível;</li>
                                 <li>6) Acesso a uma planilha massa, super interativa, que contempla:
                                     <p>- Acompanhamento das disciplinas;</p>
-                                    <p>- Simples e assertivo e muito mais;</p>
+                                    <p>- Simples, assertivo e muito mais;</p>
                                     <p>- Controle de desempenho nas questões;</p>
                                     <p>- Controle de revisões automático;</p>
                                 </li>
-                                <li>7) Acompanhamento, durante 15 dias, por e-mail, para tirar dúvidas;</li>
-                                <li>8) MIMO SURPRESA.</li>
+                                <li>7) Acompanhamento, durante 15 dias após o segundo encontro, por WhatsApp, para tirar dúvidas.</li>
+                                <li>8) Mimo: Coffee Cup personalizado #MeuCiclo ;D </li>
+                                <li>*Os encontros são virtuais, pelo Google Meet.</li>
                                 <li>Tudo isso completamente personalizado e adequado à sua rotina e nível de estudos.</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
                                 <h4>Quantooo?</h4>
@@ -191,6 +192,7 @@
                                     <h2>R$ 299,00</h2>
                                     <h1>R$ 249,00</h1>
                                 </ul>
+                                <h5>Transferência, Boleto ou Cartão (PagSeguro)</h5>
                                 <a class="botao-contato" href="https://api.whatsapp.com/send?phone=558498440409" target="_blank ">Já quero!</a>
                             </ul>
                         </div>
@@ -228,7 +230,7 @@
                                 <li>8) Acompanhamento integral pelo WhatsApp e/ou e-mail para tirar dúvidas;</li>
                                 <li>9) Atualização do edital (quando for publicado);</li>
                                 <li>10) Acesso a um escalonamento - classificação de disciplinas por relevância (assuntos mais cobrados) nas matérias-base;</li>
-                                <li>11) MIMO SURPRESA.</li>
+                                <li>11) Mimo: camiseta personalizada #MeuCiclo.</li>
                                 <li>Bônus: Encontro extra para ajuste de metas pós-edital;</li>
                                 <li>Bônus: Aplicação de 3 Simulados;</li>
                                 <li>Sua obrigação é só estudar! O resto, deixa com a gente.</li>
@@ -238,6 +240,7 @@
                                     <h2>R$ 1.499,00</h2>
                                     <h1>R$ 1299,00</h1>
                                 </ul>
+                                <h5>Transferência ou Cartão (PagSeguro)</h5>
                                 <a class="botao-contato" href="https://api.whatsapp.com/send?phone=558498440409" target="_blank ">Já quero!</a>
                             </ul>
                         </div>
